添加数据库模型
